--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,6 +1,6 @@
 .hero {
   padding: 10rem 1rem 8rem 1rem;
-  background: url("../../images/bg-pattern-intro-mobile.svg"),
+  background: url("./images/bg-pattern-intro-mobile.svg"),
     linear-gradient(180deg, var(--gradient-very-light-red) 0%, var(--gradient-light-red) 100%);
   background-repeat: no-repeat;
   background-position: 40% 45%;
@@ -58,7 +58,7 @@
 
 @media (min-width: 600px) {
   .hero {
-    background: url("../../images/bg-pattern-intro-desktop.svg"),
+    background: url("./images/bg-pattern-intro-desktop.svg"),
       linear-gradient(90deg, var(--gradient-very-light-red) 0%, var(--gradient-light-red) 100%);
     background-position: 27% 52%;
     background-size: unset;
